Fix Message Service #1

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,7 +1,8 @@
 <html>
 <head>
     <title>Chat WebSocket</title>
-    <script src="/webjars/sockjs-client/1.0.2/sockjs.min.js"></script>
+<!--    <script src="/webjars/sockjs-client/1.0.2/sockjs.min.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/2.3.3/stomp.min.js"></script>
     <script type="text/javascript">
         var stompClient = null;
@@ -12,11 +13,14 @@
             document.getElementById('conversationDiv').style.visibility
                 = connected ? 'visible' : 'hidden';
             document.getElementById('response').innerHTML = '';
+
         }
 
         function connect() {
+
             var socket = new SockJS("http://localhost:8080/ws");
             stompClient = Stomp.over(socket);
+            // stompClient.debug = null;
             stompClient.connect({}, onConnected(), onError());
         }
 
@@ -26,15 +30,61 @@
             var itemId = document.getElementById("item_ID").value;
             console.log(senderId);
             setConnected(true);
+            console.log("/user/" + senderId + "/" + receiverId + "/" + itemId + "/queue/messages");
             stompClient.subscribe(
-                "/user/"+senderId+"/"+receiverId+"/"+itemId+"/queue/messages", function (response) {
-                    let data = JSON.parse(response.body);
-                    // var msg = data.message;
-                    // var fromlogin = data.message;
-                    // render(data.username, msg, fromlogin);
-                    console.log(data);
+                "/user/" + senderId + "/" + receiverId + "/" + itemId + "/queue/messages",
+                function (message) {
+                    var body = JSON.parse(message.body).content;
+                    console.log(body);
+                    showMessage(body);
                 });
         };
+        function showMessage(message) {
+            let elementById = document.getElementById("messages");
+            var tag = document.createElement("p");
+            var text = document.createTextNode("Message");
+            tag.appendChild(text);
+            elementById.appendChild(tag);
+        }
+
+        const onMessageReceived = (msg) =>{
+            const message = JSON.parse(msg.body);
+            findChatMessage(message.senderId, message.receiverId, message.itemId);
+        }
+        // const request = (options) => {
+        //     const headers = new Headers();
+        //
+        //     if (options.setContentType !== false) {
+        //         headers.append("Content-Type", "application/json");
+        //     }
+        //
+        //     if (localStorage.getItem("accessToken")) {
+        //         headers.append(
+        //             "Authorization",
+        //             "Bearer " + localStorage.getItem("accessToken")
+        //         );
+        //     }
+        //
+        //     const defaults = { headers: headers };
+        //     options = Object.assign({}, defaults, options);
+        //
+        //     return fetch(options.url, options).then((response) =>
+        //         response.json().then((json) => {
+        //             if (!response.ok) {
+        //                 return Promise.reject(json);
+        //             }
+        //             return json;
+        //         })
+        //     );
+        // };
+        function findChatMessage(senderId, receiverId, itemId) {
+
+            return request({
+                url: "http://localhost:8080" + "/message/" + senderId + "/" + receiverId + "/" + itemId,
+                method: "GET"
+            });
+        }
+
 
         const onError = (err) => {
             console.log(err);
@@ -53,18 +103,11 @@
             var receiverId = document.getElementById("receiver_ID").value;
             var itemId = document.getElementById("item_ID").value;
             var text = document.getElementById('text').value;
-            stompClient.send("/chat/send", {},
+            stompClient.send("/app/chat", {},
                 JSON.stringify({'senderId':senderId, 'receiverId':receiverId, 'content':text, 'itemId':itemId}));
         }
 
-        function showMessageOutput(message) {
-            var response = document.getElementById('response');
-            var p = document.createElement('p');
-            p.style.wordWrap = 'break-word';
-            p.appendChild(document.createTextNode(messageOutput.from + ": "
-                + messageOutput.text + " (" + messageOutput.time + ")"));
-            response.appendChild(p);
-        }
+
     </script>
 </head>
 <body onload="disconnect()">
@@ -86,6 +129,9 @@
         <input type="text" id="text" placeholder="Write a message..."/>
         <button id="sendMessage" onclick="sendMessage();">Send</button>
         <p id="response"></p>
+    </div>
+
+    <div id="messages">
     </div>
 </div>
 
